--- a/MIPTPhysHW_Pkiyashko.vcxproj
+++ b/MIPTPhysHW_Pkiyashko.vcxproj
@@ -138,13 +138,16 @@
   <ItemGroup>
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="phys.cpp" />
     <ClCompile Include="sim.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="draw.hpp" />
+    <ClInclude Include="phys.hpp" />
     <ClInclude Include="sim.hpp" />
     <ClInclude Include="utils.hpp" />
+    <ClInclude Include="win.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
